# jff-utils

./: Doxyfile.in  Makefile  README.md  jff-utils.pro  main.cpp  meson.build
jff/: variant.cpp
jff/action/: action.cpp  action.hpp  action_interface.hpp
jff/condition/: access_interface.hpp  condition.cpp  logic_condition.cpp  logic_condition.hpp  test_condition.cpp  test_condition.hpp
jff/lexer/: lexer.cpp  lexer.hpp  literal.cpp  literal.hpp  symbol.cpp  symbol.hpp
jff/parser/: action_parser.cpp  condition_parser.cpp  condition_parser.hpp  lambda_rule_parser.cpp  lambda_rule_parser.hpp  rule_parser.cpp
jff/rule/: lambda_rule.cpp  rule.cpp
